--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 @charset "UTF-8";
-.text{font-size:16px;}
-.text{font-size:24ox;}
-.text{font-size:36px;}
+.text1{font-size:16px;}
+.text2{font-size:24ox;}
+.text3{font-size:36px;}
